--- a/home.html
+++ b/home.html
@@ -38,35 +38,112 @@
   </div>
 </div>
 
-<section class="display-left">
-  <h1>Brief</h1>
-  <img src="images/default-pp.png" alt="icone" width="80" height="80"/>
-  <p>Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore
-    et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut
-    aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit
-    in voluptate velit esse cillum dolore eu
-    fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt
-    mollit anim id est laborum.Lorem ipsum dolor sit amet,
-      consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore
-      et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut
-      aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit
-      in voluptate velit esse cillum dolore eu
-      fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt
-      mollit anim id est laborum.</br>
-  </p>
+<section>
+  <h1>Présentation</h1>
+    <p>Navid</p>
+    <p>21 ans</p>
+    <p>Paris</p>
+    <p>Passionné par la programmation et le sport.</p>
+    <p>Cherche un stage d'une durée de 4 mois (septembre à décembre 2018).</p>
 </section>
 
-<section class="display-right">
-  <h1>Parcours scolaire</h1>
+<section>
+  <h1>Cursus scolaire</h1>
+    <div class="list-school">
+      <div class="element">
+          <img src="images/saint-es.jpg" alt="icone" width="150" height="150"/>
+          <p>
+            <p>2013 - 2014 : Baccalauréat série scientifique</strong></br>
+            <i>Lycée du Saint-Esprit - 60000 Beauvais</i>
+          </p>
+      </div>
+      <div class ="element">
+          <img src="images/epita_logo.png" alt="icone" width="150" height="150"/>
+          <p>
+            <strong>2014 - Acquisition en cours d'un diplôme d'ingénieur en informatique</strong></br>
+            <i>EPITA - 94270 Le Kremelin-Bicêtre</i>
+          </p>
+      </div>
+      <div class="element">
+          <img src="images/staffordshire.png" alt="icone" width="150" height="150"/>
+          <p>
+            <strong>Janvier 2017 - Mai 2017 : Semestre à l'international</strong></br>
+            <i>Staffordshire University - Stoke-on-trent En</i>
+          </p>
+      </div>
+    </div>
+</section>
+
+<section>
+  <h1>Formation professionnelle</h1>
+  <div class="list-school">
+    <div class="element">
+      <img src="images/sacem.png" alt="icone" width="150" height="150"/>
+      <p>
+        <strong>Juin 2017 - Juillet 2017 : Stage en comptabilité et finance</strong></br>
+        <i>SACEM - 92200 Neuilly-sur-Seine</i>
+      </p>
+    </div>
+    <div class ="element">
+      <img src="images/bosh.png" alt="icone" width="150" height="150"/>
+        <p>
+          <strong>Juillet 2017 - Aout 2017 : Stage technicien informatique</strong></br>
+          <i>Robert Bosh France - 93700 Drancy</i>
+        </p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h1>Compétences</h1>
+  <div class="list-competence">
+    <div class="div-center">bash</div>
+      <div class="bar">
+        <div class="percentage" style="width:55%" data-perce="50%">
+        </div>
+    </div>
+  </div>
+  </div>
+  <div class="list-competence">
+    <div class="div-center">C</div>
+      <div class="bar">
+        <div class="percentage" style="width:70%" data-perce"50%">
+        </div>
+      </div>
+  </div>
+  <div class="list-competence">
+    <div class="div-center">C++</div>
+      <div class="bar">
+        <div class="percentage" style="width:70%" data-perce"50%">
+        </div>
+      </div>
+  </div>
+  <div class="list-competence">
+    <div class="div-center">C#</div>
+      <div class="bar">
+        <div class="percentage" style="width:65%" data-perce"50%">
+        </div>
+      </div>
+  </div>
+  <div class="list-competence">
+    <div class="div-center">Java</div>
+      <div class="bar">
+        <div class="percentage" style="width:75%" data-perce"50%">
+        </div>
+      </div>
+  </div>
+  <div class="list-competence">
+    <div class="div-center">Python</div>
+      <div class="bar">
+        <div class="percentage" style="width:70%" data-perce"50%">
+        </div>
+      </div>
+  </div>
+</section>
+
+
+<section>
+  <h1>Projets réalisés</h1>
   <img src="images/default-pp.png" alt="icone" width="80" height="80"/>
   <p>Lorem ipsum dolor sit amet,
     consectetur adipiscing elit,
